--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,19 @@
 PORT=5001
 NODE_ENV=development
 
-# Add any other environment variables your app needs below
-# Example:
-# DATABASE_URL=your_database_url
-# API_KEY=your_api_key
+# Database Configuration (PostgreSQL)
+DATABASE_URL="postgresql://user:password@localhost:5432/mecha_eg_db"
+
+# JWT Configuration
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_EXPIRE="7d"
+
+# Email Configuration (Gmail example)
+# You need to generate an App Password from your Google Account
+# https://myaccount.google.com/apppasswords
+EMAIL_USER="your-email@gmail.com"
+EMAIL_PASSWORD="your-app-password"
+EMAIL_FROM="noreply@mechaeg.com"
+
+# Frontend URL (for email links)
+FRONTEND_URL="http://localhost:3000"
