--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "client": "cd client && npm start",
     "build": "cd client && npm install && npm run build",
     "install-all": "npm install && cd client && npm install",
-    "render-build": "npm install && cd client && npm install && npm run build"
+    "render-build": "npm install && cd client && npm install && npm run build",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "node prisma/seed.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "Belal Elrashidy",
   "license": "ISC",
   "description": "Mecha-Eg Full Stack Application",
   "dependencies": {
+    "@prisma/client": "^5.7.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cubic-spline": "^3.0.3",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
+    "prisma": "^5.7.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
