--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.5.1",
+    "chartjs-node-canvas": "^5.0.0",
     "cors": "^2.8.5",
     "cubic-spline": "^3.0.3",
     "dotenv": "^16.3.1",
@@ -32,6 +34,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
+    "pdfkit": "^0.17.2",
     "prisma": "^5.7.1",
     "xlsx": "^0.18.5"
   },
